# library-db-core

./: .gitignore  Makefile  README.md  pyproject.toml
src/library_db_core/: __init__.py  config.py  database.py  models.py
src/library_db_core/sql/: scheme.sql
tests/: conftest.py  test_database.py  test_models.py  test_reports.py
